--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,9 +1,16 @@
+# Localization
+#
+# Replace the following placeholders with the correct values for
+# your installation.
+#
+# <NO_RESULTS_LINK>: The link for your site when there are no results
+
 en:
   lib_answers_search:
-    display_name: "Ask Us!"
-    short_display_name: "Ask Us!"
-    search_form_placeholder: "Search Ask Us!"
-    module_callout: "Search Ask Us!"
-    error_service_message: "searching Ask Us!"
-    no_results_service_message: "a different search"
-    no_results_link: "http://umd.libanswers.com/"
+    display_name: "LibAnswers"
+    short_display_name: "LibAnswers"
+    search_form_placeholder: "Search LibAnswers"
+    module_callout: "Search LibAnswers"
+    error_service_message: "searching LibAnswers"
+    no_results_service_message: "a different search from LibAnswers"
+    no_results_link: "<NO_RESULTS_LINK>"
